# agent-openai-python-banking-assistant

app/backend/app/agents/azure_chat/handoff/chatkit/: _chatkit_events_handler.py
app/business-api/python/account/: main.py  pyproject.toml
app/business-api/python/payment/: logging_config.py  main.py  pyproject.toml
app/business-api/python/transaction/: logging_config.py  main.py  pyproject.toml  services.py
app/frontend/banking-web/src/: index.css
app/frontend/banking-web/src/components/: AIAgent.tsx  Navigation.tsx  Sidebar.tsx
app/frontend/banking-web/src/components/chat/: Composer.tsx
app/frontend/banking-web/src/mocks/: bffApi.ts
app/frontend/banking-web/src/pages/: Account.tsx  CreditCardManagement.tsx  Dashboard.tsx  InvestmentPortfolio.tsx  Login.tsx  Payments.tsx  Support.tsx  TransactionAnalytics.tsx
infra/: main.bicep  main.parameters.json
