[project]
name = "banking-assistant-account-mcp"
version = "0.1.0"
description = "Python MCP server for account business-api using fastmcp"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastmcp",
    "pydantic",
    "fastapi[all]==0.116.1",
    "uvicorn",
    "azure-monitor-opentelemetry>=1.6.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0"
]

